[package]
name = "nanodriver"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ftdi-mpsse = "0.1.0"
libftd2xx = "0.31.0"
static_assertions = "1.1.0"
apint = "0.2.0"
embedded-hal = "0.2.6"
ftdi-embedded-hal= { path = "./ftdi-embedded-hal" }
actix-web = "3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
json = "0.12"



[[bin]]
name = "fdti_test"
path = "src/utils/test.rs"

