[package]
name = "nanodriver"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ftdi-mpsse = "0.1.0"
libftd2xx = "0.31.0"
static_assertions = "1.1.0"
libc = "0.2"
apint = "0.2.0"
embedded-hal = {version = "0.2.6",features=["unproven"]}
ftdi-embedded-hal= { path = "./ftdi-embedded-hal" }
actix-web = "3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
json = "0.12"
once_cell = "1.8.0"
chrono = "0.4.19"
rppal = { version = "0.13.1", features = ["hal-unproven"] }


[build]
target = "armv7-unknown-linux-gnueabihf"

[lib]
name = "nanodriver"
crate-type = ["cdylib"]

path = "src/lib.rs"



[features]
default=["raspberry"]
raspberry = []
fdtd=[]